--- a/template.yaml
+++ b/template.yaml
@@ -23,7 +23,7 @@ Resources:
         BinaryNumber:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /hello
+            Path: /binary-number
             Method: get
             RequestParameters:
               - method.request.querystring.numbers:
@@ -35,7 +35,7 @@ Outputs:
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   BinaryNumberApi:
     Description: "API Gateway endpoint URL for Prod stage for Binary Number function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/binary-number/"
   BinaryNumberFunction:
     Description: "Binary Number Lambda Function ARN"
     Value: !GetAtt BinaryNumberFunction.Arn
